Strings and streams now have seperate flows
